k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inem-sellar-backend
  namespace: apptolast-inemsellar
  labels:
    app: inem-sellar-backend
spec:
  type: ClusterIP
  selector:
    app: inem-sellar-backend
    environment: production
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
