k8s/backend/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: inem-sellar-backend
  namespace: apptolast-inemsellar
  labels:
    app: inem-sellar-backend
    environment: production
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`inemsellarapi.apptolast.com`)
      middlewares:
        - name: security-headers
      services:
        - name: inem-sellar-backend
          port: 8080
  tls:
    secretName: inemsellarapi-tls
